--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a href="tel:+79377746109">+79377746109</a>
-        <a href="mailto:vengerovg@gmail.com">vengerovg@gmail.com</a>
+        <a class="header-phone" href="tel:+79377746109">+7 937 774 61 09</a>
+        <a class="header-email" href="mailto:vengerovg@gmail.com">vengerovg@gmail.com</a>
       </div>
     </header>
 
@@ -25,6 +25,9 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="files/user.jpg" width="928" height="536" alt="Фотография женщины">
+        </figure>
         <h3>Трудолюбивый мужчина</h3>
         <p>Целеустремленный трудолюбивый мужчина большого сердца </p>
         <h3>Изучаю Web</h3>
@@ -35,7 +38,10 @@
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
-
+        <figure class="project-image">
+          <img src="files/project.jpg" alt="Сайт магазина товаров для дома"  width="928" height="536">
+        </figure>
+        <a class="button" href="source/project/index.html">Открыть страницу</a>
         <h3>Магазин товаров для дома</h3>
         <p>Мой первый сайт.</p>
 
@@ -46,8 +52,8 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a href="tel:+79377746109">+79377746109</a>
-        <a href="mailto:vengerovg@gmail.com">vengerovg@gmail.com</a>
+        <a class="footer-phone" href="tel:+79377746109">+7 937 774 61 09</a>
+        <a class="footer-email" href="mailto:vengerovg@gmail.com">vengerovg@gmail.com</a>
       </div>
     </footer>
   </body>
